JR: se ajustan estructuras de swagger
